# FirstLine

./: .gitignore  README.md  package-lock.json  package.json
apps/api/: README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/core/: config.py  state.py
apps/api/app/modules/ai/: router.py  service.py
apps/api/app/modules/command/: router.py  service.py
apps/api/app/modules/dispatch/: router.py  service.py
apps/api/app/modules/intake/: router.py  service.py
apps/api/app/modules/intel/: reference_data.py  router.py  service.py
apps/api/app/modules/mapping/: router.py  service.py
apps/api/app/modules/officer/: router.py  service.py
apps/api/app/modules/recommendation/: router.py  service.py
apps/api/app/modules/reporting/: router.py  service.py
apps/api/app/schemas/: common.py
apps/api/src/firstline_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_api_flow.py
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  styles.css
apps/worker/: pyproject.toml  worker.py
docs/: ARCHITECTURE.md  INVESTOR_DEMO_PLAYBOOK.md  PRODUCT_SCOPE.md
infra/: docker-compose.yml
scripts/: dev.ps1  start-remote-debug-cloudflared.ps1  start-remote-debug.ps1  stop-remote-debug.ps1
