[project]
name = "firstline-api"
version = "0.1.0"
description = "FirstLine FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "pydantic-settings>=2.10.1",
  "python-dotenv>=1.1.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "httpx>=0.28.1"
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.4.1",
  "httpx>=0.28.1"
]
